Define storageclass for bitcoind node
This clas is based on SSD disk.

It requires Google Compute Engine persistent disk CSI Driver to be enabled on the
cluster, see: https://cloud.google.com/kubernetes-engine/docs/how-to/persistent-volumes/gce-pd-csi-driver

--- a/infrastructure/kube/templates/bitcoin/bitcoind/bitcoind-statefulset.yaml
+++ b/infrastructure/kube/templates/bitcoin/bitcoind/bitcoind-statefulset.yaml
@@ -68,7 +68,7 @@ spec:
     - metadata:
         name: bitcoind-data
       spec:
-        storageClassName: standard
+        storageClassName: bitcoind
         accessModes:
           - ReadWriteOnce
         resources:
