Define common labels for bitcoind node

--- a/infrastructure/kube/templates/bitcoin/bitcoind/kustomization.yaml
+++ b/infrastructure/kube/templates/bitcoin/bitcoind/kustomization.yaml
@@ -3,6 +3,10 @@ resources:
   - bitcoind-statefulset.yaml
   - bitcoind-storageclass.yaml
 
+commonLabels:
+  chain: bitcoin
+  app: bitcoind
+
 configMapGenerator:
   - name: bitcoind
     literals:
