Run bitcoind with disablewallet and txindex
We don't need to run a wallet so `-disablewallet=1`.

`-txindex=1` is required by electrumx to have all the transactions.

--- a/infrastructure/kube/templates/bitcoin/bitcoind/bitcoind-statefulset.yaml
+++ b/infrastructure/kube/templates/bitcoin/bitcoind/bitcoind-statefulset.yaml
@@ -22,6 +22,8 @@ spec:
             - -rpcallowip=0.0.0.0/0
             - -rpcuser=$(RPC_USER)
             - -rpcpassword=$(RPC_PASSWORD)
+            - -disablewallet=1
+            - -txindex=1
           env:
             - name: RPC_USER
               valueFrom:
