Set --testnet flags for keep-clients in keep-test
The flag was renamed from `--goerli` to `--testnet`.

Refs: https://github.com/keep-network/keep-core/issues/3579

--- a/infrastructure/kube/keep-test/keep-client/gen/template.yaml
+++ b/infrastructure/kube/keep-test/keep-client/gen/template.yaml
@@ -85,7 +85,7 @@ spec:
               mountPath: /mnt/keep-client/keyfile
           command: ["keep-client", "start"]
           args:
-            - --goerli
+            - --testnet
             - --ethereum.url
             - $(ETH_WS_URL)
             - "--ethereum.keyFile"
