--- a/infrastructure/kube/keep-test/keep-client/keep-clients.yaml
+++ b/infrastructure/kube/keep-test/keep-client/keep-clients.yaml
@@ -81,7 +81,7 @@ spec:
         - keep-client
         - start
         args:
-        - --goerli
+        - --testnet
         - --ethereum.url
         - $(ETH_WS_URL)
         - --ethereum.keyFile
@@ -288,7 +288,7 @@ spec:
         - keep-client
         - start
         args:
-        - --goerli
+        - --testnet
         - --ethereum.url
         - $(ETH_WS_URL)
         - --ethereum.keyFile
@@ -495,7 +495,7 @@ spec:
         - keep-client
         - start
         args:
-        - --goerli
+        - --testnet
         - --ethereum.url
         - $(ETH_WS_URL)
         - --ethereum.keyFile
@@ -700,7 +700,7 @@ spec:
         - keep-client
         - start
         args:
-        - --goerli
+        - --testnet
         - --ethereum.url
         - $(ETH_WS_URL)
         - --ethereum.keyFile
@@ -905,7 +905,7 @@ spec:
         - keep-client
         - start
         args:
-        - --goerli
+        - --testnet
         - --ethereum.url
         - $(ETH_WS_URL)
         - --ethereum.keyFile
@@ -1110,7 +1110,7 @@ spec:
         - keep-client
         - start
         args:
-        - --goerli
+        - --testnet
         - --ethereum.url
         - $(ETH_WS_URL)
         - --ethereum.keyFile
@@ -1315,7 +1315,7 @@ spec:
         - keep-client
         - start
         args:
-        - --goerli
+        - --testnet
         - --ethereum.url
         - $(ETH_WS_URL)
         - --ethereum.keyFile
@@ -1520,7 +1520,7 @@ spec:
         - keep-client
         - start
         args:
-        - --goerli
+        - --testnet
         - --ethereum.url
         - $(ETH_WS_URL)
         - --ethereum.keyFile
@@ -1725,7 +1725,7 @@ spec:
         - keep-client
         - start
         args:
-        - --goerli
+        - --testnet
         - --ethereum.url
         - $(ETH_WS_URL)
         - --ethereum.keyFile
@@ -1930,7 +1930,7 @@ spec:
         - keep-client
         - start
         args:
-        - --goerli
+        - --testnet
         - --ethereum.url
         - $(ETH_WS_URL)
         - --ethereum.keyFile
