--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -323,4 +323,4 @@ jobs:
           docker run \
             --workdir /go/src/github.com/keep-network/keep-core \
             go-build-env \
-            gotestsum -- -tags=integration ./...
+            gotestsum -- -timeout 20m -tags=integration ./...
