Define snapshot class for bitcoin node

--- a/infrastructure/kube/templates/bitcoin/bitcoind/kustomization.yaml
+++ b/infrastructure/kube/templates/bitcoin/bitcoind/kustomization.yaml
@@ -2,6 +2,7 @@ resources:
   - bitcoind-service.yaml
   - bitcoind-statefulset.yaml
   - bitcoind-storageclass.yaml
+  - bitcoind-volumesnapshotclass.yaml
 
 commonLabels:
   chain: bitcoin
