Run second replica of bitcoind from snapshot
Make a snapshot of PVC from first replica and use it scale the
statefulset to two replicas.

Ref: https://cloud.google.com/kubernetes-engine/docs/how-to/persistent-volumes/volume-snapshots#v1

--- a/infrastructure/kube/keep-test/bitcoin/testnet/bitcoind/kustomization.yaml
+++ b/infrastructure/kube/keep-test/bitcoin/testnet/bitcoind/kustomization.yaml
@@ -29,6 +29,7 @@ patches:
       metadata:
         name: bitcoind
       spec:
+        replicas: 2
         volumeClaimTemplates:
           - metadata:
               name: bitcoind-data
