Add kube local files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@
 
 # Secret directory used in Kubernetes configurations
 /infrastructure/kube/**/.secret/
+/infrastructure/kube/**/*.secret
+
+# Backup directory for local copies of Kubernetes configurations
+/infrastructure/kube/**/.backup/
 
 # Keys
 keystore/
