--- a/test/config.toml
+++ b/test/config.toml
@@ -39,6 +39,11 @@ EthereumMetricsTick = "1m27s"
 Enabled = true
 DisableProxy = true
 
+[maintainer.WalletCoordination]
+Enabled = true
+RedemptionInterval = "13h"
+SweepInterval = "64h"
+
 [developer]
 RandomBeaconAddress = "0xcf64c2a367341170cb4e09cf8c0ed137d8473ceb"
 WalletRegistryAddress = "0x143ba24e66fce8bca22f7d739f9a932c519b1c76"
