--- a/test/config.toml
+++ b/test/config.toml
@@ -44,6 +44,9 @@ Enabled = true
 RedemptionInterval = "13h"
 SweepInterval = "64h"
 
+[maintainer.Spv]
+Enabled = true
+
 [developer]
 RandomBeaconAddress = "0xcf64c2a367341170cb4e09cf8c0ed137d8473ceb"
 WalletRegistryAddress = "0x143ba24e66fce8bca22f7d739f9a932c519b1c76"
