--- a/.github/workflows/contracts-ecdsa-docs.yml
+++ b/.github/workflows/contracts-ecdsa-docs.yml
@@ -55,8 +55,7 @@ jobs:
   contracts-docs-prepublish-wait:
     name: Wait for contracts docs to be published
     needs: docs-detect-changes
-     # TODO: remove last OR
-    if: (github.event_name == 'release' && startsWith(github.ref, 'refs/tags/solidity/')) || github.ref == 'refs/pull/3534/merge'
+    if: github.event_name == 'release' && startsWith(github.ref, 'refs/tags/solidity/')
     runs-on: ubuntu-latest
     steps:
       - name: Wait 4 minutes
