--- a/.github/workflows/contracts-random-beacon-docs.yml
+++ b/.github/workflows/contracts-random-beacon-docs.yml
@@ -58,8 +58,7 @@ jobs:
   contracts-docs-publish:
     name: Publish contracts documentation
     needs: docs-detect-changes
-    # TODO: remove last OR
-    if: (github.event_name == 'release' && startsWith(github.ref, 'refs/tags/solidity/')) || github.ref == 'refs/pull/3534/merge'
+    if: github.event_name == 'release' && startsWith(github.ref, 'refs/tags/solidity/')
     uses: keep-network/ci/.github/workflows/reusable-solidity-docs.yml@main
     with:
       projectDir: /solidity/random-beacon
