--- a/.github/workflows/contracts-ecdsa-docs.yml
+++ b/.github/workflows/contracts-ecdsa-docs.yml
@@ -39,7 +39,7 @@ jobs:
     name: Publish preview of contracts documentation
     needs: docs-detect-changes
     if: |
-      github.event_name == 'pull_request'
+      needs.docs-detect-changes.outputs.path-filter == 'true'
         || github.event_name == 'push'
         || github.event_name == 'workflow_dispatch'
     uses: keep-network/ci/.github/workflows/reusable-solidity-docs.yml@main
