Split contracts API doc into multiple files
Having all the contracts documented in one common file turned out to be hard to
render by the GitBook. We're switching to documenting each contract file in a
separate Markdown file.
As the generated files will be much smaller now and GitBook has its own file `ON
THIS PAGE` section, we don't need to generate Table of Contents.
The one thing that we also change as part of this PR is `rsyncDelete` setting -
we'll have it set to `true`, in order to delete documentation of contracts which
get removed from the repo. As we're not working directly on a `main` branch,
this isn't dangerous (we'll see all the delitions in the PR diff).

--- a/.github/workflows/contracts-ecdsa-docs.yml
+++ b/.github/workflows/contracts-ecdsa-docs.yml
@@ -46,6 +46,7 @@ jobs:
     with:
       projectDir: /solidity/ecdsa
       publish: false
+      addTOC: false
       commentPR: true
       exportAsGHArtifacts: true
 
@@ -74,12 +75,14 @@ jobs:
     with:
       projectDir: /solidity/ecdsa
       publish: true
+      addTOC: false
       verifyCommits: true
       destinationRepo: threshold-network/threshold
       destinationFolder: ./docs/app-development/tbtc-v2/ecdsa-api
       destinationBaseBranch: main
       userEmail: 38324465+thesis-valkyrie@users.noreply.github.com
       userName: Valkyrie
+      rsyncDelete: true
     secrets:
       githubToken: ${{ secrets.THRESHOLD_DOCS_GITHUB_TOKEN }}
       gpgPrivateKey: ${{ secrets.THRESHOLD_DOCS_GPG_PRIVATE_KEY_BASE64 }}
