--- a/test/config.yaml
+++ b/test/config.yaml
@@ -37,7 +37,7 @@ Maintainer:
   WalletCoordination:
     Enabled: true
     RedemptionInterval: "13h"
-    SweepInterval: "64h"
+    DepositSweepInterval: "64h"
   Spv:
     Enabled: true
 Developer:
