--- a/test/config.yaml
+++ b/test/config.yaml
@@ -37,6 +37,7 @@ Maintainer:
   WalletCoordination:
     Enabled: true
     RedemptionInterval: "13h"
+    RedemptionWalletsLimit: 10
     DepositSweepInterval: "64h"
   Spv:
     Enabled: true
