--- a/test/config.toml
+++ b/test/config.toml
@@ -43,6 +43,7 @@ DisableProxy = true
 Enabled = true
 RedemptionInterval = "13h"
 RedemptionWalletsLimit = 10
+RedemptionRequestAmountLimit = 500
 DepositSweepInterval = "64h"
 
 [maintainer.Spv]
