--- a/test/config.yaml
+++ b/test/config.yaml
@@ -38,6 +38,7 @@ Maintainer:
     Enabled: true
     RedemptionInterval: "13h"
     RedemptionWalletsLimit: 10
+    RedemptionRequestAmountLimit: 500
     DepositSweepInterval: "64h"
   Spv:
     Enabled: true
