Updated flag configuration for SPV maintainer

--- a/test/config.toml
+++ b/test/config.toml
@@ -46,6 +46,10 @@ DepositSweepInterval = "64h"
 
 [maintainer.Spv]
 Enabled = true
+HistoryDepth = 25000
+TransactionLimit = 80
+RestartBackoffTime = "2h"
+IdleBackoffTime = "15m"
 
 [developer]
 RandomBeaconAddress = "0xcf64c2a367341170cb4e09cf8c0ed137d8473ceb"
