--- a/test/config.yaml
+++ b/test/config.yaml
@@ -40,6 +40,10 @@ Maintainer:
     DepositSweepInterval: "64h"
   Spv:
     Enabled: true
+    HistoryDepth: 25000
+    TransactionLimit: 80
+    RestartBackoffTime: "2h"
+    IdleBackoffTime: "15m"
 Developer:
   RandomBeaconAddress: "0xcf64c2a367341170cb4e09cf8c0ed137d8473ceb"
   WalletRegistryAddress: "0x143ba24e66fce8bca22f7d739f9a932c519b1c76"
