Add comment about keep-test all type

--- a/infrastructure/kube/keep-test/keep-maintainer/kustomization.yaml
+++ b/infrastructure/kube/keep-test/keep-maintainer/kustomization.yaml
@@ -5,6 +5,8 @@ namespace: default
 
 commonLabels:
   app: keep-maintainer
+  # The current setup runs spv and walletCoordination modules as a workaround
+  # for reasons mentioned in `patches` property below.
   type: all
   network: goerli
 
