Replace mentions of `GoerliLghtRelay` with `SepoliaLightRelay`
As Goerli testnet becomes deprecated (with end of 2023) we're switching our
testnet configuration to run on Sepolia testnet. As part of that work we've
deployed a `SepoliaLightRelay` contract meant to relace `GoerliLightRelay`.

--- a/infrastructure/kube/keep-test/keep-maintainer-staging/kustomization.yaml
+++ b/infrastructure/kube/keep-test/keep-maintainer-staging/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
 namespace: default
 
 # Regular testnet maintainer doesn't run bitcoinDifficulty module due to specifics
-# of LightRelay running on testnet (GoerliLightRelay). This setup is running
+# of LightRelay running on testnet (SepoliaLightRelay). This setup is running
 # the `bitcoinDifficulty` module of maintainer connected to Bitcoin mainnet.
 nameSuffix: -staging
 
