--- a/infrastructure/kube/keep-test/tbtc-v2-maintainer/kustomization.yaml
+++ b/infrastructure/kube/keep-test/tbtc-v2-maintainer/kustomization.yaml
@@ -7,7 +7,7 @@ namespace: default
 
 commonLabels:
   app: tbtc-v2-maintainer
-  network: goerli
+  network: sepolia
 
 configMapGenerator:
   - name: tbtc-v2-maintainer-eth-accounts-info
