Re-generate tbtc contract bindings
Here we re-generate tbtc contracts bindings in order to include the new
`WalletProposalValidator` contract and remove the obsolete `WalletCoordinator`.

--- a/pkg/chain/ethereum/tbtc/gen/Makefile
+++ b/pkg/chain/ethereum/tbtc/gen/Makefile
@@ -1,18 +1,18 @@
 npm_package_name=@keep-network/tbtc-v2
 
 # Contracts for which the bindings should be generated.
-required_contracts := Bridge MaintainerProxy LightRelay LightRelayMaintainerProxy WalletCoordinator
+required_contracts := Bridge MaintainerProxy LightRelay LightRelayMaintainerProxy WalletProposalValidator
 
 # There is a bug in the currently used abigen version (v1.10.19) that makes it
 # re-declaring structs used by multiple contracts
 # https://github.com/ethereum/go-ethereum/issues/24627. This is a problem
-# for us because Bridge, WalletCoordinator and MaintainerProxy contracts all use
+# for us because Bridge, WalletProposalValidator and MaintainerProxy contracts all use
 # the same structs which are then re-declared in the same package once abigen
 # does its work.
 # An ultimate solution would be upgrading go-ethereum (thus abigen too) to v1.11 but
 # that version contains some breaking changes that make the upgrade non-trivial.
 # As a short-term workaround, we use some Makefile shenanigans to slightly rename
-# the conflicting structs in the WalletCoordinator and MaintainerProxy output files.
+# the conflicting structs in the WalletProposalValidator and MaintainerProxy output files.
 # We use perl for that purpose as sed is not cross-platform and works a bit
 # differently on GNU and BSD.
 #
@@ -20,11 +20,11 @@ required_contracts := Bridge MaintainerProxy LightRelay LightRelayMaintainerProx
 #       https://github.com/keep-network/keep-core/issues/3524
 define after_abi_hook
 	$(eval type := $(1))
-	$(if $(filter $(type),WalletCoordinator),$(call fix_wallet_coordinator_collision))
+	$(if $(filter $(type),WalletProposalValidator),$(call fix_wallet_proposal_validator_collision))
 	$(if $(filter $(type),MaintainerProxy),$(call fix_maintainer_proxy_collision))
 endef
-define fix_wallet_coordinator_collision
-	@perl -pi -e s,BitcoinTxInfo,BitcoinTxInfo2,g ./abi/WalletCoordinator.go
+define fix_wallet_proposal_validator_collision
+	@perl -pi -e s,BitcoinTxInfo,BitcoinTxInfo2,g ./abi/WalletProposalValidator.go
 endef
 define fix_maintainer_proxy_collision
 	@perl -pi -e s,BitcoinTxUTXO,BitcoinTxUTXO2,g ./abi/MaintainerProxy.go
