Install @walletconnect libs + craco
We need all those libs to properly run walletconnect v2. Craco will be needed to
do some tweaks in webpack. We also have to install
`@walletconnect/keyvaluestorage` library as a separate lib, because
`@walletconnect/ethereum-provider` dependency use it's newer version as a
dependency which doesn't work properly.

--- a/solidity-v1/dashboard/package.json
+++ b/solidity-v1/dashboard/package.json
@@ -13,6 +13,9 @@
     "@ledgerhq/hw-transport-webusb": "^6.24.1",
     "@rehooks/local-storage": "^2.4.4",
     "@threshold-network/solidity-contracts": ">1.1.0-dev <1.1.0-ropsten",
+    "@walletconnect/ethereum-provider": "2.9.0",
+    "@walletconnect/keyvaluestorage": "1.0.2",
+    "@walletconnect/modal": "2.5.9",
     "@walletconnect/web3-subprovider": "^1.3.6",
     "axios": "^0.21.2",
     "bignumber.js": "9.0.0",
@@ -45,18 +48,19 @@
   "scripts": {
     "build-css": "lessc --clean-css src/css/app.less src/css/app.css",
     "watch-css": "npm run build-css && less-watch-compiler src/css src/css app.less",
-    "start-js": "react-scripts start",
+    "start-js": "craco start",
     "setup": "./scripts/copy-contracts.sh ../build/contracts",
     "start": "npm run watch-css & npm run start-js",
-    "build": "npm run build-css && react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "build": "npm run build-css && craco build",
+    "test": "craco test --env=jsdom",
+    "eject": "craco eject",
     "lint": "eslint --ext .jsx --ext .js .",
     "lint:fix": "eslint --fix --ext .jsx --ext .js .",
     "format": "npm run lint && prettier --check .",
     "format:fix": "npm run lint:fix && prettier --write ."
   },
   "devDependencies": {
+    "@craco/craco": "5.8.0",
     "@keep-network/prettier-config-keep": "github:keep-network/prettier-config-keep#a1a333e",
     "@redux-saga/testing-utils": "^1.1.3",
     "@testing-library/react-hooks": "^5.1.2",
